--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Coderitual</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Coderitual</title>
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,800|Raleway:400,600,800" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
+  <main>
+    <header>
+      <div class="header">
+        <img src="./assets/images/logo.png" alt="Coderitual">
+      </div>
+      <h1>I build delightful consumer-grade experiences</h1>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Libraries</li>
+          <li>Projects</li>
+          <li>Writings</li>
+        </ul>
+      </nav>
+      <div class="call-to-action"></div>
+      <div class="bio">
+        My name is Michał Skowronek and I build websites.
+        Follow coderitual on Instagram
+        Contact me at coderitual.com
+        More of my work can be found on Github and Codepen
+      </div>
+    </header>
+  </main>
 </body>
+
 </html>
