feat: update html content

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
       </nav>
       <div class="call-to-action"></div>
       <div class="bio">
-        My name is Michał Skowronek and I build websites.
-        Follow coderitual on Instagram
-        Contact me at coderitual.com
+        Hi! I'm Michał Skowronek and I build websites.
+        Follow me on Instagram
         More of my work can be found on Github and Codepen
       </div>
     </header>
