feat: add class BEM names to the html

--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
   <main>
     <header>
       <div class="header">
-        <img src="./assets/images/logo.png" alt="Coderitual">
-      </div>
-      <h1>I build delightful consumer-grade experiences</h1>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>Libraries</li>
-          <li>Projects</li>
-          <li>Writings</li>
-        </ul>
-      </nav>
-      <div class="call-to-action"></div>
-      <div class="bio">
-        Hi! I'm Michał Skowronek and I build websites.
-        Follow me on Instagram
-        More of my work can be found on Github and Codepen
+        <img class="header__image" src="./assets/images/logo.png" alt="Coderitual">
+
+        <h1 class="header__hero">I build delightful consumer-grade experiences</h1>
+        <nav class="navigation">
+          <ul class="navigation__list">
+            <li class="navigation__element">Home</li>
+            <li class="navigation__element">Libraries</li>
+            <li class="navigation__element">Projects</li>
+            <li class="navigation__element">Writings</li>
+          </ul>
+        </nav>
+        <div class="header__info"></div>
+        <div class="header__bio">
+          Hi! I'm Michał Skowronek and I build websites.
+          Follow me on Instagram
+          More of my work can be found on Github and Codepen
+        </div>
       </div>
     </header>
   </main>
