feat: update html content

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
           </ul>
         </nav>
         <div class="header__info"></div>
-        <div class="header__bio">
-          Hi! I'm Michał Skowronek and I build websites.
-          Follow me on Instagram
-          More of my work can be found on Github and Codepen
-        </div>
+        <h2 class="header__bio">
+          My name is Michał Skowronek.
+          More of my work can be found on Github and Codepen.
+          Follow me on Instagram and Twitter.
+        </h2>
       </div>
     </header>
   </main>
