feat: update styles

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </nav>
         <div class="header__info"></div>
         <h2 class="header__bio">
-          My name is Michał Skowronek.
-          More of my work can be found on Github and Codepen.
-          Follow me on Instagram and Twitter.
+          My name is Michał Skowronek. <br>
+          More of my work can be found on Github and Codepen. <br>
+          Follow me on Instagram and Twitter. <br>
         </h2>
       </div>
     </header>
