feat: update content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <li class="navigation__element">Writings</li>
           </ul>
         </nav>
-        <div class="header__info"></div>
+        <div class="header__info">
+          <img src="./assets/images/mouse.png" alt=""> <span class="header__scroll">Scroll Down</span>
+        </div>
         <h2 class="header__bio">
           My name is Michał Skowronek. <br>
           More of my work can be found on Github and Codepen. <br>
