--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 398 1080">
           <defs>
             <style>
-              .a {
+              .b {
                 opacity: 0.19;
-                fill: url(#B);
+                fill: url(#b);
               }
             </style>
             <linearGradient id="b" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
@@ -42,12 +42,12 @@
               <stop offset="1" stop-opacity="0" />
             </linearGradient>
           </defs>
-          <path class="a" d="M0,0H398V1080H0Z" />
+          <path class="b" d="M0,0H398V1080H0Z" />
         </svg>
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 682 682">
           <defs>
             <style>
-              .a {
+              .c {
                 opacity: 0.21;
                 fill: url(#c);
               }
@@ -57,7 +57,7 @@
               <stop offset="1" stop-color="gray" stop-opacity="0" />
             </linearGradient>
           </defs>
-          <circle class="a" cx="341" cy="341" r="341" />
+          <circle class="c" cx="341" cy="341" r="341" />
         </svg>
       </div>
       <div class="header">
