--- a/index.html
+++ b/index.html
@@ -14,50 +14,50 @@
   <main>
     <header>
       <div class="background">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1829.992 1829.992">
+        <svg class="background__path-a" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1829.992 1829.992">
           <defs>
             <style>
-              .a {
+              .path-a {
                 opacity: 0.21;
-                fill: url(#a);
+                fill: url(#color-a);
               }
             </style>
-            <linearGradient id="a" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+            <linearGradient id="color-a" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
               <stop offset="0" stop-color="#ff0091" />
               <stop offset="1" stop-color="gray" stop-opacity="0" />
             </linearGradient>
           </defs>
-          <path class="a" d="M0,0H510V2078H0Z" transform="translate(0 360.624) rotate(-45)" />
+          <path class="path-a" d="M0,0H510V2078H0Z" transform="translate(0 360.624) rotate(-45)" />
         </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 398 1080">
+        <svg class="background__path-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 398 1080">
           <defs>
             <style>
-              .b {
+              .path-b {
                 opacity: 0.19;
-                fill: url(#b);
+                fill: url(#color-b);
               }
             </style>
-            <linearGradient id="b" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+            <linearGradient id="color-b" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
               <stop offset="0" stop-color="#006fff" />
               <stop offset="1" stop-opacity="0" />
             </linearGradient>
           </defs>
-          <path class="b" d="M0,0H398V1080H0Z" />
+          <path class="path-b" d="M0,0H398V1080H0Z" />
         </svg>
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 682 682">
+        <svg class="background__path-eclipse" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 682 682">
           <defs>
             <style>
-              .c {
+              .path-eclipse {
                 opacity: 0.21;
-                fill: url(#c);
+                fill: url(#color-eclipse);
               }
             </style>
-            <linearGradient id="c" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+            <linearGradient id="color-eclipse" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
               <stop offset="0" stop-color="#deb8ff" />
               <stop offset="1" stop-color="gray" stop-opacity="0" />
             </linearGradient>
           </defs>
-          <circle class="c" cx="341" cy="341" r="341" />
+          <circle class="path-eclipse" cx="341" cy="341" r="341" />
         </svg>
       </div>
       <div class="header">
