feat: tweak grid positioning

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <img src="./assets/images/mouse.png" alt=""> <span class="header__scroll">Scroll Down</span>
         </div>
         <h2 class="header__bio">
-          My name is Michał Skowronek. <br>
+          <span class="header__bio-name" >My name is Michał Skowronek.</span> <br>
           More of my work can be found on Github and Codepen. <br>
           Follow me on Instagram and Twitter. <br>
         </h2>
