feat: update bio

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="header__info">
           <img src="./assets/images/mouse.png" alt=""> <span class="header__scroll">Scroll Down</span>
         </div>
-        <h2 class="header__bio">
-          <span class="header__bio-name" >My name is Michał Skowronek.</span> <br>
-          More of my work can be found on Github and Codepen. <br>
-          Follow me on Instagram and Twitter. <br>
+        <h2 class="bio">
+          <span class="bio__name" >My name is Michał Skowronek.</span> <br>
+          More of my work can be found on <a class="link" href="https://github.com/coderitual">Github</a> and <a class="link" href="https://codepen.com/coderitual">Codepen</a>. <br>
+          Follow me on <a class="link" href="https://instagram.com/coderitual">Instagram</a> and <a class="link" href="https://twitter.com/coderitual">Twitter</a>. <br>
         </h2>
       </div>
     </header>
