feat: add shine to the background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <main>
     <header>
       <div class="background">
-        <svg class="background__path-a" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1829.992 1829.992">
+        <svg class="background__path-a" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 1829.992 1829.992">
           <defs>
             <style>
               .path-a {
@@ -29,7 +30,24 @@
           </defs>
           <path class="path-a" d="M0,0H510V2078H0Z" transform="translate(0 360.624) rotate(-45)" />
         </svg>
-        <svg class="background__path-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 398 1080">
+        <svg class="background__path-a-shine" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 750.6 750.6">
+          <defs>
+            <style>
+              .path-a-shine {
+                opacity: 0.21;
+                fill: url(#color-a-shine);
+              }
+            </style>
+            <linearGradient id="color-a-shine" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+              <stop offset="0" stop-color="gray" stop-opacity="0" />
+              <stop offset="0.456" stop-color="#ff0091" />
+              <stop offset="1" stop-color="gray" stop-opacity="0" />
+            </linearGradient>
+          </defs>
+          <path class="path-a-shine" d="M0,0H510V551.508H0Z" transform="translate(0 360.624) rotate(-45)" />
+        </svg>
+        <svg class="background__path-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 398 1080">
           <defs>
             <style>
               .path-b {
@@ -44,7 +62,8 @@
           </defs>
           <path class="path-b" d="M0,0H398V1080H0Z" />
         </svg>
-        <svg class="background__path-eclipse" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 682 682">
+        <svg class="background__path-eclipse" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 682 682">
           <defs>
             <style>
               .path-eclipse {
@@ -75,9 +94,11 @@
           <img src="./assets/images/mouse.png" alt=""> <span class="header__scroll">Scroll Down</span>
         </div>
         <h2 class="bio">
-          <span class="bio__name" >My name is Michał Skowronek.</span> <br>
-          More of my work can be found on <a class="link" href="https://github.com/coderitual">Github</a> and <a class="link" href="https://codepen.com/coderitual">Codepen</a>. <br>
-          Follow me on <a class="link" href="https://instagram.com/coderitual">Instagram</a> and <a class="link" href="https://twitter.com/coderitual">Twitter</a>. <br>
+          <span class="bio__name">My name is Michał Skowronek.</span> <br>
+          More of my work can be found on <a class="link" href="https://github.com/coderitual">Github</a> and <a class="link"
+            href="https://codepen.com/coderitual">Codepen</a>. <br>
+          Follow me on <a class="link" href="https://instagram.com/coderitual">Instagram</a> and <a class="link" href="https://twitter.com/coderitual">Twitter</a>.
+          <br>
         </h2>
       </div>
     </header>
