feat: use 1 svg element as a background

--- a/index.html
+++ b/index.html
@@ -14,69 +14,70 @@
   <main>
     <header>
       <div class="background">
-        <svg class="background__path-a" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 0 1829.992 1829.992">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1920 1080">
           <defs>
             <style>
-              .path-a {
+              .cls-1 {
+                fill: #fff;
+                stroke: #707070;
+              }
+
+              .cls-2 {
+                clip-path: url(#clip-path);
+              }
+
+              .cls-3,
+              .cls-5,
+              .cls-6 {
                 opacity: 0.21;
-                fill: url(#color-a);
+              }
+
+              .cls-3 {
+                fill: url(#linear-gradient);
+              }
+
+              .cls-4 {
+                opacity: 0.19;
+                fill: url(#linear-gradient-2);
+              }
+
+              .cls-5 {
+                fill: url(#linear-gradient-3);
+              }
+
+              .cls-6 {
+                fill: url(#linear-gradient-4);
               }
             </style>
-            <linearGradient id="color-a" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+            <clipPath id="clip-path">
+              <rect id="Rectangle_13" data-name="Rectangle 13" class="cls-1" width="1920" height="1080" />
+            </clipPath>
+            <linearGradient id="linear-gradient" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
               <stop offset="0" stop-color="#ff0091" />
               <stop offset="1" stop-color="gray" stop-opacity="0" />
             </linearGradient>
-          </defs>
-          <path class="path-a" d="M0,0H510V2078H0Z" transform="translate(0 360.624) rotate(-45)" />
-        </svg>
-        <svg class="background__path-a-shine" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 750.6 750.6">
-          <defs>
-            <style>
-              .path-a-shine {
-                opacity: 0.21;
-                fill: url(#color-a-shine);
-              }
-            </style>
-            <linearGradient id="color-a-shine" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+            <linearGradient id="linear-gradient-2" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+              <stop offset="0" stop-color="#006fff" />
+              <stop offset="1" stop-opacity="0" />
+            </linearGradient>
+            <linearGradient id="linear-gradient-3" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+              <stop offset="0" stop-color="#deb8ff" />
+              <stop offset="1" stop-color="gray" stop-opacity="0" />
+            </linearGradient>
+            <linearGradient id="linear-gradient-4" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
               <stop offset="0" stop-color="gray" stop-opacity="0" />
               <stop offset="0.456" stop-color="#ff0091" />
               <stop offset="1" stop-color="gray" stop-opacity="0" />
             </linearGradient>
           </defs>
-          <path class="path-a-shine" d="M0,0H510V551.508H0Z" transform="translate(0 360.624) rotate(-45)" />
-        </svg>
-        <svg class="background__path-b" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 0 398 1080">
-          <defs>
-            <style>
-              .path-b {
-                opacity: 0.19;
-                fill: url(#color-b);
-              }
-            </style>
-            <linearGradient id="color-b" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
-              <stop offset="0" stop-color="#006fff" />
-              <stop offset="1" stop-opacity="0" />
-            </linearGradient>
-          </defs>
-          <path class="path-b" d="M0,0H398V1080H0Z" />
-        </svg>
-        <svg class="background__path-eclipse" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          viewBox="0 0 682 682">
-          <defs>
-            <style>
-              .path-eclipse {
-                opacity: 0.21;
-                fill: url(#color-eclipse);
-              }
-            </style>
-            <linearGradient id="color-eclipse" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
-              <stop offset="0" stop-color="#deb8ff" />
-              <stop offset="1" stop-color="gray" stop-opacity="0" />
-            </linearGradient>
-          </defs>
-          <circle class="path-eclipse" cx="341" cy="341" r="341" />
+          <g id="Mask_Group_1" data-name="Mask Group 1" class="cls-2">
+            <g id="Group_29" data-name="Group 29" transform="translate(40 6)">
+              <path id="Path_1" data-name="Path 1" class="cls-3" d="M0,0H510V2078H0Z" transform="translate(303.319 -5.494) rotate(-45)" />
+              <path id="Path_3" data-name="Path 3" class="cls-4" d="M0,0H398V1080H0Z" transform="translate(1244)" />
+              <circle id="Ellipse_4" data-name="Ellipse 4" class="cls-5" cx="341" cy="341" r="341" transform="translate(960 168)" />
+              <path id="Path_7" data-name="Path 7" class="cls-6" d="M0,0H510V551.508H0Z" transform="translate(632.547 323.734) rotate(-45)" />
+            </g>
+          </g>
         </svg>
       </div>
       <div class="header">
