feat: update background

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
               .cls-6 {
                 fill: url(#linear-gradient-4);
               }
+
+              .cls-7 {
+                opacity: 0.16;
+                fill: url(#linear-gradient-5);
+              }
             </style>
             <clipPath id="clip-path">
               <rect id="Rectangle_13" data-name="Rectangle 13" class="cls-1" width="1920" height="1080" />
@@ -69,16 +74,23 @@
               <stop offset="0.456" stop-color="#ff0091" />
               <stop offset="1" stop-color="gray" stop-opacity="0" />
             </linearGradient>
+            <linearGradient id="linear-gradient-5" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+              <stop offset="0" stop-color="gray" stop-opacity="0" />
+              <stop offset="0.456" stop-color="#61a7ff" />
+              <stop offset="1" stop-color="gray" stop-opacity="0" />
+            </linearGradient>
           </defs>
           <g id="Mask_Group_1" data-name="Mask Group 1" class="cls-2">
-            <g id="Group_29" data-name="Group 29" transform="translate(40 6)">
+            <g id="Group_29" data-name="Group 29" transform="translate(10 6)">
               <path id="Path_1" data-name="Path 1" class="cls-3" d="M0,0H510V2078H0Z" transform="translate(303.319 -5.494) rotate(-45)" />
               <path id="Path_3" data-name="Path 3" class="cls-4" d="M0,0H398V1080H0Z" transform="translate(1244)" />
               <circle id="Ellipse_4" data-name="Ellipse 4" class="cls-5" cx="341" cy="341" r="341" transform="translate(960 168)" />
               <path id="Path_7" data-name="Path 7" class="cls-6" d="M0,0H510V551.508H0Z" transform="translate(632.547 323.734) rotate(-45)" />
+              <path id="Path_8" data-name="Path 8" class="cls-7" d="M0,0H398.153V551.508H0Z" transform="translate(1243.847 236.655)" />
             </g>
           </g>
         </svg>
+
       </div>
       <div class="header">
         <img class="header__image" src="./assets/images/logo.png" alt="Coderitual">
