feat: update background

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
               .cls-3,
               .cls-5,
-              .cls-6 {
+              .cls-6,
+              .cls-7 {
                 opacity: 0.21;
               }
 
@@ -50,7 +51,6 @@
               }
 
               .cls-7 {
-                opacity: 0.16;
                 fill: url(#linear-gradient-5);
               }
             </style>
@@ -81,16 +81,15 @@
             </linearGradient>
           </defs>
           <g id="Mask_Group_1" data-name="Mask Group 1" class="cls-2">
-            <g id="Group_29" data-name="Group 29" transform="translate(10 6)">
+            <g id="Group_29" data-name="Group 29" transform="translate(40)">
               <path id="Path_1" data-name="Path 1" class="cls-3" d="M0,0H510V2078H0Z" transform="translate(303.319 -5.494) rotate(-45)" />
               <path id="Path_3" data-name="Path 3" class="cls-4" d="M0,0H398V1080H0Z" transform="translate(1244)" />
               <circle id="Ellipse_4" data-name="Ellipse 4" class="cls-5" cx="341" cy="341" r="341" transform="translate(960 168)" />
               <path id="Path_7" data-name="Path 7" class="cls-6" d="M0,0H510V551.508H0Z" transform="translate(632.547 323.734) rotate(-45)" />
-              <path id="Path_8" data-name="Path 8" class="cls-7" d="M0,0H398.153V551.508H0Z" transform="translate(1243.847 236.655)" />
+              <path id="Path_8" data-name="Path 8" class="cls-7" d="M0,0H398.153V551.508H0Z" transform="translate(1243.847 -243.345)" />
             </g>
           </g>
         </svg>
-
       </div>
       <div class="header">
         <img class="header__image" src="./assets/images/logo.png" alt="Coderitual">
