feat: update navigation

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__element">Home</li>
-            <li class="navigation__element">Libraries</li>
-            <li class="navigation__element">Projects</li>
+            <li class="navigation__element">Lab</li>
             <li class="navigation__element">Writings</li>
           </ul>
         </nav>
